# training_render2_plugin

./: Readme.txt  __init__.py  handler.py  pyproject.toml  renderer.py  track_player.py
core/: handler.py  lfs_path_player.py  multi_track_player.py  state.py
operators/: start.py  stop.py
panels/: __init__.py  training_render.py  training_render.rml
