# SPDX-FileCopyrightText: 2025
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name        = "training_render"
version     = "1.4.1"
description = "Render snapshots/Video from either fixed or moving camera positions during 3DGS training"
author     = "Brian Davis (bb6)" 

dependencies = ["av"]

[tool.lichtfeld]
auto_start        = true
hot_reload        = true
plugin_api        = ">=1,<2"
lichtfeld_version = ">=0.5.0"
required_features = []


